# pico-cnn

./: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
data/: imagenet.means  mnist_28x28.pgm
data/lenet/: input.data  lenet.onnx  output.data  random_lenet_input.data  random_lenet_output.data
data/mnist_mlp/: random_mnist_mlp_input.data  random_mnist_mlp_output.data
data/mnist_simple_perceptron/: mnist_simple_perceptron.onnx  random_mnist_simple_perceptron_input.data  random_mnist_simple_perceptron_output.data
doc/: binary_weight_file_format.md  mean_file_format.md  weight_file_format.md
examples/: alexnet.c  alexnet.cpp  bvlc_alexnet.c  caffe_lenet.c  caffe_lenet_arm_cpu.c  caffe_lenet_cpu.c  caffe_lenet_fixed16.c  caffe_lenet_naive.c  ekut_es_alexnet_arm_cpu.c  ekut_es_alexnet_naive.c  ekut_es_vgg_naive.c  es_alexnet.c  es_alexnet_cpu.c  es_alexnet_naive.c  es_vgg_cpu.c  es_vgg_naive.c  lenet.c  lenet.cpp  lenet_caffe.c  lenet_kernels.h  lenet_tanh.c  lenet_tanh.weights  mnist_mlp.c  mnist_mlp.cpp  mnist_simple_perceptron.c  mnist_simple_perceptron.cpp  vgg.c  vgg.cpp
onnx_import/: backend.py  compute_graph.py  constprop.py  data_structures.py  generate_dummy.py  ir.py  memory_allocation.py  memory_manager.py  onnx_importer.py  onnx_to_pico-cnn.py  onnx_to_pico_cnn.py  pico_cnn.py  pico_cnn_layers.py  requirements.txt  runLenet.sh  utils.py
onnx_import/code_templates/: buffer_cleanup.c  dummy_input.c  flatten.c  kernel_allocation.c  layer_delete.cpp  layer_exec.cpp  mul.c  output_allocation.c  pico_cnn_add.c  pico_cnn_average_pool.c  pico_cnn_average_pool1d.c  pico_cnn_average_pool2d.c  pico_cnn_batchnorm.c  pico_cnn_clip.c  pico_cnn_concat.c  pico_cnn_conv1d.c  pico_cnn_conv2d.c  pico_cnn_conv2d_legacy.c  pico_cnn_fc.c  pico_cnn_global_average_pool2d.c  pico_cnn_global_max_pool2d.c  pico_cnn_lrn.c  pico_cnn_matmul.c  pico_cnn_max_pool1d.c  pico_cnn_max_pool2d.c  pico_cnn_pad.c  pico_cnn_relu.c  pico_cnn_softmax.c  reference_input.c  reshape.c  squeeze.c  transpose.c
onnx_import/code_templates/activation/: pico_cnn_clip_alloc.cpp  pico_cnn_clip_decl.cpp  pico_cnn_lrn_alloc.cpp  pico_cnn_lrn_decl.cpp  pico_cnn_relu_alloc.cpp  pico_cnn_relu_decl.cpp  pico_cnn_softmax_alloc.cpp  pico_cnn_softmax_decl.cpp
onnx_import/code_templates/batch_normalization/: pico_cnn_batchnorm_alloc.cpp  pico_cnn_batchnorm_decl.cpp
onnx_import/code_templates/conv/: pico_cnn_conv1d_alloc.cpp  pico_cnn_conv2d_alloc.cpp  pico_cnn_conv2d_decl.cpp  pico_cnn_conv2d_del.cpp
onnx_import/code_templates/fc/: pico_cnn_fc_alloc.cpp  pico_cnn_fc_decl.cpp  pico_cnn_matmul_alloc.cpp  (+1 more)
onnx_import/templates/: conv2d.c
pico-cnn/: .compare_float_files.c.swp  Makefile  parameters.h  pico-cnn.h  tensor.h  utils.c  utils.h
pico-cnn-cpp/: Makefile  parameters.h  pico-cnn.h  tensor.cpp  tensor.h  tensor_shape.cpp  tensor_shape.h  utils.h
pico-cnn-cpp/io/: read_binary_reference_data.cpp  read_binary_reference_data.h  read_binary_weights.cpp  read_binary_weights.h  read_imagenet_labels.h  read_imagenet_validation_labels.h  read_jpeg.h  read_means.cpp  read_means.h  read_pgm.h  write_float.cpp  write_pgm.cpp  write_pgm.h
pico-cnn-cpp/layers/: activation_function.cpp  activation_function.h  batch_normalization.cpp  batch_normalization.h  convolution.cpp  convolution.h  fully_connected.cpp  fully_connected.h  layer.cpp  layer.h  pooling.cpp  pooling.h
pico-cnn/driver/: fixed16.c  fixed16.h  neon_mathfun.c  neon_mathfun.h
pico-cnn/io/: read_binary_reference_data.c  read_binary_reference_data.cpp  read_binary_reference_data.h  read_binary_sample_data.c  read_binary_sample_data.h  read_binary_weights.c  read_binary_weights.h  read_imagenet_labels.c  read_imagenet_labels.cpp  read_imagenet_labels.h  read_imagenet_validation_labels.c  read_imagenet_validation_labels.cpp  read_imagenet_validation_labels.h  read_jpeg.c  read_jpeg.cpp  read_jpeg.h  read_means.c  read_means.h  read_mnist.c  read_mnist.cpp  read_mnist.h  read_pgm.c  read_pgm.cpp  read_pgm.h  read_weights.c  read_weights.h  write_float.c  write_float.h  write_pgm.c  write_pgm.h
pico-cnn/layers/: activation_function.c  activation_function.h  batch_normalization.c  batch_normalization.cpp  batch_normalization.h  concatenate.c  concatenate.h  convolution.c  convolution.h  fully_connected.c  fully_connected.cpp  fully_connected.h  fully_connected_or.h  layer.cpp  layer.h  local_response_normalization.h  pooling.c  pooling.h  pooling_or.h
src/: CMakeLists.txt  activation_function.h  compare_float_files.c  convolution.h  lenet.c  lenet_kernels.h  parameters.h  pooling.h  read_mnist.h  write_float.h  write_pgm.h
test/: Makefile  activation_function_benchmark.c  convolution_benchmark.c  fixed16_test.c  fully_connected_benchmark.c  main.cpp  max_pooling_test.c  pooling_benchmark.c  run_tests.c  utility_functions.c  utility_functions.h
test/cpp/: Makefile  main.cpp  test_activation_functions.cpp  test_activation_functions.h  test_batch_normalization.cpp  test_batch_normalization.h  test_convolution.cpp  test_convolution.h  test_fully_connected.cpp  test_fully_connected.h  test_pooling.cpp  test_pooling.h  test_tensor.cpp  test_tensor.h  test_utility.cpp  test_utility.h
test/layers/: test_activation_function.c  test_activation_function.h  test_activation_functions.h  test_batch_normalization.c  test_batch_normalization.h  test_concatenate.c  test_concatenate.h  test_convolution.c  test_convolution.cpp  test_convolution.h  test_fully_connected.c  test_fully_connected.cpp  test_fully_connected.h  test_pooling.c  test_pooling.cpp  test_pooling.h  test_tensor.cpp  test_tensor.h
util/: check_onnx_model.py  compare_float_files.c  convert_caffe_to_pico_cnn.py  create_sample_data.py  display_pgm_cmd.c  find_max_min_weight.c  generate_random_kernel.R  generate_reference_data.py  jpeg_to_rgb_pgms.c  onnx_importer.py  parse_onnx_reference_files.py  parse_onnx_sample_files.py  prepare_images.py  preprocessor_macro_test.c  requirements.txt  run_all_networks.sh  save_intermediate_outputs.py  scale_images.py  util_requirements.txt
(+64 files in other folders)
