cmake_minimum_required(VERSION 2.8)
project(pico_cnn)
#set(CMAKE_C_FLAGS "-Wall")
set(CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR})
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
include_directories("${PROJECT_SOURCE_DIR}")
add_executable(lenet ${PROJECT_SOURCE_DIR}/lenet.c)
#target_link_libraries(lenet NONE)
